Created layout for list orders screen for store owner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FileIOExample">
-        <activity android:name=".ListProd"
+        <activity
+            android:name=".ListOrders"
+            android:exported="false" />
+        <activity
+            android:name=".ListProd"
             android:parentActivityName=".MainActivity">
+
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
