--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FileIOExample">
-
-        <activity android:name=".Order_Details"
+        <activity
+            android:name=".CustomerAccountCreationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Order_Details"
             android:parentActivityName=".ListProd">
+
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
-        </activity>
-        <!--make List product screen the parent screen of Order_details screen -->
-
+        </activity> <!-- make List product screen the parent screen of Order_details screen -->
         <activity
             android:name=".ListProd"
             android:parentActivityName=".MainActivity">
