--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FileIOExample">
         <activity
+            android:name=".OwnerListProductsActivity"
+            android:exported="false" />
+        <activity
             android:name=".OwnerAccountCreationActivity"
             android:exported="false" />
         <activity
