Implemented RecyclerView functionality for ListOrders activity
Added:
   - OrdersObj.java (for use by ListOrders activity)

Changed:
   - ListOrders.java (implemented the functionality of the RecyclerView)
   - activity_list_orders.xml

Contributor: Maria Gotcheva

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FileIOExample">
         <activity
+            android:name=".ListOrders"
+            android:exported="true" />
+        <activity
             android:name=".OwnerAccountCreationActivity"
             android:exported="false" />
         <activity
             android:name=".ListStores"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
