Redesigned Customer Screen Updated layouts for recycler view Updated 3 Customer recycler adapters and view holders --Zc

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FileIOExample">
         <activity
+            android:name=".Cust_StoreList"
+            android:exported="false" />
+        <activity
+            android:name=".Cust_Order"
+            android:exported="false" />
+        <activity
+            android:name=".Cust_Cart"
+            android:exported="false" />
+        <activity
             android:name=".OwnerAccountCreationActivity"
             android:exported="false" />
         <activity
