--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FileIOExample">
         <activity
+            android:name=".Cart"
+            android:exported="false" />
+        <activity
             android:name=".NavOriginActivity"
             android:exported="false"
             android:label="@string/title_activity_nav_origin"
