Finished OwnerListProductsActivity and added function to add products to a store
Added:
- OwnerAddNewActivity.java

Changed:
- DatabaseUtils.java
- OwnerListProductsActivity.java
- Order.java (updateTotalCost() method now rounds to 2 decimal places)
- LoginActivity.java (edited testing code)
- Store.java (refactored orders field to orderList)

Contributor: Dylan Williams

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FileIOExample">
         <activity
+            android:name=".OwnerAddNewProductActivity"
+            android:exported="false" />
+        <activity
             android:name=".CustomerProfile"
             android:exported="false" />
         <activity
