Implemented functionality of OwnerOrdersList and ListStores
Added:
   - OwnerOrdersList.java (renamed version of ListOrders)
   - OwnerOrdersListAdapter.java (adapter for the recyclerview used in OwnerOrdersList)
   - activity_owner_orders_list.xml (renamed version of activity_list_orders)

Changed:
   - activity_list_stores.xml (removed button, instead the entire cardview acts as a button)
   - ListStores.java (can now find position of Store object in the recyclerview to retrieve data)
   - order_item.xml (removed button, instead the entire cardview acts as a button)
   - OrderObj.java (added additional fields)
   - stores_card.xml (removed button, instead the entire cardview acts as a button)
   - StoresListAdapter.java (adapter for the recyclerview used in ListStores)

Contributor: Maria Gotcheva

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FileIOExample">
         <activity
+            android:name=".OwnerOrdersList"
+            android:exported="false" />
+        <activity
             android:name=".ListOrders"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".OwnerAccountCreationActivity"
             android:exported="false" />
         <activity
             android:name=".ListStores"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
