AndroidManifest.xml changed
Contributor: Dylan Williams

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FileIOExample">
         <activity
-<<<<<<< CustomerScreens
             android:name=".Cust_Prod"
             android:exported="false" />
         <activity
@@ -20,8 +19,8 @@
             android:name=".Cust_Order"
             android:exported="false" />
         <activity
-            android:name=".Cust_Cart"
-=======
+            android:name=".Cust_Cart"/>
+        <activity
             android:name=".CustomerEditProfileActivity"
             android:exported="false" />
         <activity
@@ -35,7 +34,6 @@
             android:exported="false" />
         <activity
             android:name=".OwnerListProductsActivity"
->>>>>>> Working-Version
             android:exported="false" />
         <activity
             android:name=".OwnerAccountCreationActivity"
